# holo

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
docs/: CMakeLists.txt  index.md
holo/: .input.holo.hh  AbstractDispatcher.hh  Arch.cc  Arch.hh  CMakeLists.txt  Emitter.cc  Emitter.hh  Evt.cc  Evt.hh  Gl.hh  GlProgram.cc  GlShader.cc  GlTexture.cc  GlVertexArray.cc  Holo.hh  Pane.cc  Pane.hh  Sdl.cc  Sdl.hh  SdlEvt.cc  SdlEvt.hh  SdlGl.hh  ShareFiles.cc  ShareFiles.hh  boostPrimitives.hh  holo-deck.cc  holo-ed.cc  holo-view.cc  holo.cc  stdPrimitives.hh
holo/gl/: Buffer.hh  Camera.cc  Camera.hh  Errors.cc  Errors.hh  Mesh.cc  Mesh.hh  Model.cc  Model.hh  SlProgram.cc  SlProgram.hh  SlShader.cc  SlShader.hh  Texture.cc  Texture.hh  VertexArray.cc  VertexArray.hh  base.hh  math.hh
holo/gl/sl/: 1.model_loading.fs
holo/sdl/: Evt.cc  Evt.hh  EvtKeyCode.cc  EvtKeyCode.hh  EvtKeyPress.cc  EvtKeyPress.hh  EvtMouse.cc  EvtMouse.hh  EvtRoot.cc  EvtRoot.hh  EvtTypeSwitch.cc  EvtTypeSwitch.hh  EvtWin.cc  EvtWin.hh  GlCamera.hh  GlContext.cc  GlContext.hh  GlSys.cc  GlSys.hh  GlTexture.cc  GlTexture.hh  Pane.cc  Pane.hh  PaneGl.cc  PaneGl.hh  PaneRender.cc  PaneRender.hh  Primitives.hh  Render.cc  Render.hh  RootEvt.cc  RootEvt.hh  Sys.cc  Sys.hh  WinEvt.cc  WinEvt.hh  Window.cc  Window.hh
share/: CMakeLists.txt  Credits.md  holo-ed.glade
share/shaders/: test1.frag  v1.frag  v1.vert
src/: AbstractDispatcher.hh  CMakeLists.txt  GlProgram.cc  GlProgram.hh  Program.cc  Program.hh  SdlEvt.cc  SdlEvt.hh  SdlRootEvt.cc  SdlRootEvt.hh  Window.cc  Window.hh  holo-deck.cc  holo.cc  holo.hh
test/: CMakeLists.txt  EvtTests.cc  GlMathTest.cc  OnlySdl.cc  SdlEvtTests.cc  SdlGl.test.cc  SdlGlTest.cc  Testing.md
