cmake_minimum_required(VERSION 3.8)
project(holo
  VERSION 0.1.0
  DESCRIPTION "SDL2/OpenGL Game Engine"
  HOMEPAGE_URL "https://github.com/BadQuanta/holo"
)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(OpenGL_GL_PREFERENCE GLVND)

find_package(OpenGL REQUIRED)
find_package(GLU REQUIRED)
find_package(GLEW REQUIRED)
set(SDL2PP_WITH_IMAGE ON)
set(SDL2PP_WITH_MIXER ON)
set(SDL2PP_WITH_TTF ON)
add_subdirectory(ext/libSDL2pp)
set(BOOST_INCLUDE_LIBRARIES json log filesystem program_options)
add_subdirectory(ext/boost)
add_subdirectory(share)
add_subdirectory(src)
find_package(Doxygen REQUIRED dot dia)
set(DOXYGEN_CREATE_SUBDIRS YES)
set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
set(DOXYGEN_TAB_SIZE 2)
set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_EXTRACT_PRIVATE YES)
set(DOXYGEN_NUM_PROC_THREADS 0)
set(DOXYGEN_SORT_MEMBER_DOCS NO)
set(DOXYGEN_SORT_BRIEF_DOCS NO)
set(DOXYGEN_SORT_MEMBERS_CTORS_1ST YES)
set(DOXYGEN_SORT_GROUP_NAMES YES)
set(DOXYGEN_SORT_BY_SCOPE_NAME YES)
set(DOXYGEN_SOURCE_BROWSER YES)
set(DOXYGEN_REFERENCED_BY_RELATION YES)
set(DOXYGEN_REFERENCES_RELATION YES)
set(DOXYGEN_USE_HTAGS NO)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md )
doxygen_add_docs(docs ${PROJECT_SOURCE_DIR}/src  ${PROJECT_SOURCE_DIR}/README.md ALL COMMENT "Generate documentation")
