find_package(Doxygen REQUIRED dot dia)
set(DOXYGEN_CREATE_SUBDIRS YES)
set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
set(DOXYGEN_TAB_SIZE 2)
set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_EXTRACT_PRIVATE YES)
set(DOXYGEN_NUM_PROC_THREADS 0)
set(DOXYGEN_SORT_MEMBER_DOCS NO)
set(DOXYGEN_SORT_BRIEF_DOCS NO)
set(DOXYGEN_SORT_MEMBERS_CTORS_1ST YES)
set(DOXYGEN_SORT_GROUP_NAMES YES)
set(DOXYGEN_SORT_BY_SCOPE_NAME YES)
set(DOXYGEN_STRIP_CODE_COMMENTS NO)
set(DOXYGEN_SOURCE_BROWSER YES)
set(DOXYGEN_REFERENCED_BY_RELATION YES)
set(DOXYGEN_REFERENCES_RELATION YES)
set(DOXYGEN_USE_HTAGS NO)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md )
doxygen_add_docs(docs
    ${PROJECT_SOURCE_DIR}/holo
    ${PROJECT_SOURCE_DIR}/README.md
    "${PROJECT_SOURCE_DIR}/test/Testing.md"
    "${PROJECT_SOURCE_DIR}/share/Credits.md"
    COMMENT "Generate documentation"
)

add_custom_target(open-docs "xdg-open" "${PROJECT_BINARY_DIR}/docs/html/index.html" DEPENDS docs)
