include(CTest)

function(HoloTest arg)
  add_executable(${arg} "${arg}.cc")
  target_link_libraries(${arg} holo )
  target_include_directories(${arg} PRIVATE ${PROJECT_SOURCE_DIR} "${PROJECT_BINARY_DIR}")
  add_test(${arg} ${arg})
  message("HOLO TEST ${arg}")
endfunction()

#add_executable(OnlySdl OnlySdl.cc)
#target_link_libraries(OnlySdl holo)
#target_include_directories(OnlySdl PRIVATE ${PROJECT_SOURCE_DIR} "${PROJECT_BINARY_DIR}/holo")
#add_test(NAME testOnlySdl COMMAND OnlySdl )
HoloTest(EvtTests)
HoloTest(SdlEvtTests)
HoloTest(GlMathTest)
HoloTest(OnlySdl)
HoloTest(SdlGlTest)
HoloTest(SdlGl.test)
